--- a/src/main/webapp/template/admin/assets/scss/dashboards/_dashboards.scss
+++ b/src/main/webapp/template/admin/assets/scss/dashboards/_dashboards.scss
@@ -165,6 +165,10 @@
     display: grid;
     grid-template-columns: repeat(4,minmax(0,1fr));
     padding: 11px 0;
+
+    @media #{$lg, $md, $xs} {
+      grid-template-columns: repeat(3,minmax(0,1fr));
+    }
   }
 }
 
