--- a/src/main/webapp/template/admin/assets/css/orderList.css
+++ b/src/main/webapp/template/admin/assets/css/orderList.css
@@ -14,7 +14,8 @@
     color: white; 
     border-radius: 50%; 
     padding: 4px 9px; 
-    font-size: 9px; 
+    font-size: 10px; 
+    font-weight: 900;
 }
 
 
